--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "podcast-app",
   "version": "0.0.0",
   "private": true,
-  "engines":{
+  "engines": {
     "node": "8.1.4"
   },
   "scripts": {
@@ -30,5 +30,8 @@
     "superagent": "^3.5.2",
     "webpack": "^2.3.2",
     "xml2js": "^0.4.17"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
